[gd_scene load_steps=6 format=2]

[ext_resource path="res://inventory/inventory.gd" type="Script" id=1]
[ext_resource path="res://fonts/unifont_font_theme.tres" type="Theme" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.219608, 0.219608, 0.219608, 1 )

[sub_resource type="StyleBoxFlat" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="AddItem" type="Button" parent="."]
margin_left = 24.0
margin_top = 16.0
margin_right = 144.0
margin_bottom = 56.0
text = "添加物品"

[node name="Open" type="Button" parent="."]
margin_left = 24.0
margin_top = 72.0
margin_right = 144.0
margin_bottom = 112.0
text = "打开物品栏"

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -216.0
margin_right = 224.0
margin_bottom = 216.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="Panel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 64.0
margin_bottom = 32.0
text = "物品栏"

[node name="Items" type="GridContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -205.0
margin_top = -376.0
margin_right = 205.0
margin_bottom = -36.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 6
__meta__ = {
"_edit_group_": true
}

[node name="Item1" type="PanelContainer" parent="Panel/Items"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Panel/Items/Item1"]
position = Vector2( 30, 30 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Item2" type="PanelContainer" parent="Panel/Items"]
margin_left = 70.0
margin_right = 130.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item3" type="PanelContainer" parent="Panel/Items"]
margin_left = 140.0
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item4" type="PanelContainer" parent="Panel/Items"]
margin_left = 210.0
margin_right = 270.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item5" type="PanelContainer" parent="Panel/Items"]
margin_left = 280.0
margin_right = 340.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item6" type="PanelContainer" parent="Panel/Items"]
margin_left = 350.0
margin_right = 410.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item7" type="PanelContainer" parent="Panel/Items"]
margin_top = 70.0
margin_right = 60.0
margin_bottom = 130.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item8" type="PanelContainer" parent="Panel/Items"]
margin_left = 70.0
margin_top = 70.0
margin_right = 130.0
margin_bottom = 130.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item9" type="PanelContainer" parent="Panel/Items"]
margin_left = 140.0
margin_top = 70.0
margin_right = 200.0
margin_bottom = 130.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item10" type="PanelContainer" parent="Panel/Items"]
margin_left = 210.0
margin_top = 70.0
margin_right = 270.0
margin_bottom = 130.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item11" type="PanelContainer" parent="Panel/Items"]
margin_left = 280.0
margin_top = 70.0
margin_right = 340.0
margin_bottom = 130.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item12" type="PanelContainer" parent="Panel/Items"]
margin_left = 350.0
margin_top = 70.0
margin_right = 410.0
margin_bottom = 130.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item13" type="PanelContainer" parent="Panel/Items"]
margin_top = 140.0
margin_right = 60.0
margin_bottom = 200.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item14" type="PanelContainer" parent="Panel/Items"]
margin_left = 70.0
margin_top = 140.0
margin_right = 130.0
margin_bottom = 200.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item15" type="PanelContainer" parent="Panel/Items"]
margin_left = 140.0
margin_top = 140.0
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item16" type="PanelContainer" parent="Panel/Items"]
margin_left = 210.0
margin_top = 140.0
margin_right = 270.0
margin_bottom = 200.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item17" type="PanelContainer" parent="Panel/Items"]
margin_left = 280.0
margin_top = 140.0
margin_right = 340.0
margin_bottom = 200.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item18" type="PanelContainer" parent="Panel/Items"]
margin_left = 350.0
margin_top = 140.0
margin_right = 410.0
margin_bottom = 200.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item19" type="PanelContainer" parent="Panel/Items"]
margin_top = 210.0
margin_right = 60.0
margin_bottom = 270.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item20" type="PanelContainer" parent="Panel/Items"]
margin_left = 70.0
margin_top = 210.0
margin_right = 130.0
margin_bottom = 270.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item21" type="PanelContainer" parent="Panel/Items"]
margin_left = 140.0
margin_top = 210.0
margin_right = 200.0
margin_bottom = 270.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item22" type="PanelContainer" parent="Panel/Items"]
margin_left = 210.0
margin_top = 210.0
margin_right = 270.0
margin_bottom = 270.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item23" type="PanelContainer" parent="Panel/Items"]
margin_left = 280.0
margin_top = 210.0
margin_right = 340.0
margin_bottom = 270.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item24" type="PanelContainer" parent="Panel/Items"]
margin_left = 350.0
margin_top = 210.0
margin_right = 410.0
margin_bottom = 270.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item25" type="PanelContainer" parent="Panel/Items"]
margin_top = 280.0
margin_right = 60.0
margin_bottom = 340.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item26" type="PanelContainer" parent="Panel/Items"]
margin_left = 70.0
margin_top = 280.0
margin_right = 130.0
margin_bottom = 340.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item27" type="PanelContainer" parent="Panel/Items"]
margin_left = 140.0
margin_top = 280.0
margin_right = 200.0
margin_bottom = 340.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item28" type="PanelContainer" parent="Panel/Items"]
margin_left = 210.0
margin_top = 280.0
margin_right = 270.0
margin_bottom = 340.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item29" type="PanelContainer" parent="Panel/Items"]
margin_left = 280.0
margin_top = 280.0
margin_right = 340.0
margin_bottom = 340.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item30" type="PanelContainer" parent="Panel/Items"]
margin_left = 350.0
margin_top = 280.0
margin_right = 410.0
margin_bottom = 340.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Panel2" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = 288.0
margin_right = 224.0
margin_bottom = 384.0
custom_styles/panel = SubResource( 1 )

[node name="UserItems" type="GridContainer" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -30.0
margin_right = 205.0
margin_bottom = 30.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 6
__meta__ = {
"_edit_group_": true
}

[node name="Item1" type="PanelContainer" parent="Panel2/UserItems"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item2" type="PanelContainer" parent="Panel2/UserItems"]
margin_left = 70.0
margin_right = 130.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item3" type="PanelContainer" parent="Panel2/UserItems"]
margin_left = 140.0
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item4" type="PanelContainer" parent="Panel2/UserItems"]
margin_left = 210.0
margin_right = 270.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item5" type="PanelContainer" parent="Panel2/UserItems"]
margin_left = 280.0
margin_right = 340.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[node name="Item6" type="PanelContainer" parent="Panel2/UserItems"]
margin_left = 350.0
margin_right = 410.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 2 )

[connection signal="pressed" from="AddItem" to="." method="_on_AddItem_pressed"]
[connection signal="pressed" from="Open" to="." method="_on_Open_pressed"]
